fixes work detail page footer spacing

--- a/src/scss/5_layout/_layout.scss
+++ b/src/scss/5_layout/_layout.scss
@@ -19,3 +19,7 @@ body.work-list section {
 body.work-list footer {
   margin-top: calc(#{$stroke-width} - #{$gutter}) !important;
 }
+
+body.work.depth-2 footer {
+  margin-top: $stroke-width !important;
+}
